@@ -1,2 +1,2 @@
-#define VERSION  "version " PACKAGE_VERSION " [28-Aug-2021]"
+#define VERSION  "version " PACKAGE_VERSION " [29-Aug-2021]"
 #define BUG_ADDRESS "issue@texjp.org"
